@@ -168,6 +168,9 @@ static apr_status_t do_firstkey(real_file_t *f, DBT *pkey)
     if ((dberr = (*f->bdb->cursor)(f->bdb, NULL, &f->curs
 #if DB_VER == 3
                                    , 0
+#elif ( DB_VERSION_MAJOR == 2 ) && ( DB_VERSION_MINOR > 5) 
+                                   , 0
+
 #endif
                                    )) == 0) {
         dberr = (*f->curs->c_get)(f->curs, pkey, &data, DB_FIRST);
@@ -228,6 +231,8 @@ static apr_status_t set_error(apr_dbm_t *dbm, apr_status_t dbm_said)
         /* ### use db_strerror() */
         dbm->errcode = dbm_said;
 #if DB_VER == 1
+        dbm->errmsg = NULL;
+#elif DB_VER == 2
         dbm->errmsg = NULL;
 #else
         dbm->errmsg = db_strerror(dbm_said - APR_OS_START_USEERR);
